	PR tree-optimization/83221 	* tree-ssa-reassoc.c (sort_by_operand_rank): Shift bb_rank 	down by 16. 	(init_reassoc): Formatting fix.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255297 138bc75d-0d04-0410-961f-82ee72b054a4